add a sample plugin and let it compile

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 
     <modules>
         <module>releng/io.github.jokoala.tycho.configuration</module>
+        <module>bundles</module>
     </modules>
 </project> 
 
