--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>releng/io.github.jokoala.tycho.configuration</module>
         <module>bundles</module>
         <module>features</module>
+        <module>releng</module>
     </modules>
 </project> 
 
