--- a/releng/io.github.jokoala.tycho.configuration/pom.xml
+++ b/releng/io.github.jokoala.tycho.configuration/pom.xml
@@ -9,13 +9,13 @@
   <properties>
     <tycho.version>0.24.0</tycho.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-    <mars-repo.url>http://download.eclipse.org/releases/mars</mars-repo.url>
+    <luna-repo.url>http://download.eclipse.org/releases/luna</luna-repo.url>
   </properties>
 
   <repositories>
     <repository>
-      <id>mars</id>
-      <url>${mars-repo.url}</url>
+      <id>luna</id>
+      <url>${luna-repo.url}</url>
       <layout>p2</layout>
     </repository>
 
@@ -34,7 +34,14 @@
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho.version}</version>
-        <configuration>
+        <configuration> 
+          <target>
+          	<artifact>
+          	  <groupId>io.github.jokoala.tycho</groupId>
+    		  <artifactId>io.github.jokoala.tycho.targetdefinition</artifactId>
+              <version>1.0.0-SNAPSHOT</version>
+          	</artifact>
+          </target>
           <environments>
             <environment>
               <os>linux</os>
@@ -54,11 +61,6 @@
             <environment>
               <os>win32</os>
               <ws>win32</ws>
-              <arch>x86_64</arch>
-            </environment>
-            <environment>
-              <os>macosx</os>
-              <ws>cocoa</ws>
               <arch>x86_64</arch>
             </environment>
           </environments>
