--- a/releng/io.github.jokoala.tycho.mirrorproject/pom.xml
+++ b/releng/io.github.jokoala.tycho.mirrorproject/pom.xml
@@ -1,16 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <project>
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.jokoala.tycho</groupId>
-  <artifactId>io.github.jokoala.tycho.configuration</artifactId>
+  <artifactId>io.github.jokoala.tycho.mirrorproject</artifactId>
+  <packaging>eclipse-repository</packaging>
   <version>1.0.0-SNAPSHOT</version>
-  <packaging>pom</packaging>
 
   <properties>
     <tycho.version>0.24.0</tycho.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
     <luna-repo.url>http://download.eclipse.org/releases/luna</luna-repo.url>
-    <!-- <luna-repo.url>file:///home/johannes/pro/eclipse/tycho-workspace/tycho/releng/io.github.jokoala.tycho.mirrorproject/target/repository</luna-repo.url> -->
   </properties>
 
   <repositories>
@@ -36,6 +34,7 @@
         <artifactId>target-platform-configuration</artifactId>
         <version>${tycho.version}</version>
         <configuration> 
+            <!--
           <target>
           	<artifact>
           	  <groupId>io.github.jokoala.tycho</groupId>
@@ -43,6 +42,7 @@
               <version>1.0.0-SNAPSHOT</version>
           	</artifact>
           </target>
+          -->
           <environments>
             <environment>
               <os>linux</os>
@@ -65,6 +65,14 @@
               <arch>x86_64</arch>
             </environment>
           </environments>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.eclipse.tycho</groupId>
+        <artifactId>tycho-p2-repository-plugin</artifactId>
+        <version>${tycho.version}</version>
+        <configuration>
+          <includeAllDependencies>true</includeAllDependencies>
         </configuration>
       </plugin>
     </plugins>
